# mlpack

./: CMakeLists.txt
src/mlpack/: CMakeLists.txt  mlpack_export.hpp
src/mlpack/core/math/: random.hpp
src/mlpack/core/optimizers/ada_delta/: ada_delta.cpp
src/mlpack/core/optimizers/ada_grad/: ada_grad.cpp
src/mlpack/core/optimizers/rmsprop/: rmsprop.cpp
src/mlpack/core/optimizers/sgd/: sgd.hpp  sgd_impl.hpp
src/mlpack/core/optimizers/sgd/termination_policies/: default_termination.hpp
src/mlpack/core/optimizers/smorms3/: smorms3.cpp
src/mlpack/core/tree/rectangle_tree/: r_tree_descent_heuristic_impl.hpp  r_tree_split_impl.hpp  x_tree_split_impl.hpp
src/mlpack/methods/ann/: ffn.hpp  ffn_impl.hpp
src/mlpack/methods/ann/layer/: linear.hpp
src/mlpack/methods/neighbor_search/: ns_model_impl.hpp
xcodeproj/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
xcodeproj/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  distclean_cmakeRulesBuildPhase.makeDebug  distclean_cmakeRulesBuildPhase.makeRelWithDebInfo  distclean_postBuildPhase.makeRelWithDebInfo  mlpack_arma_config_cmakeRulesBuildPhase.makeDebug  mlpack_gitversion_cmakeRulesBuildPhase.makeMinSizeRel
xcodeproj/mlpack.xcodeproj/: project.pbxproj
xcodeproj/src/mlpack/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/CMakeScripts/: mlpack_headers_postBuildPhase.makeRelease  mlpack_postBuildPhase.makeDebug  mlpack_postBuildPhase.makeMinSizeRel  mlpack_postBuildPhase.makeRelWithDebInfo  mlpack_postBuildPhase.makeRelease
xcodeproj/src/mlpack/bindings/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/bindings/cli/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/bindings/python/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/bindings/tests/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/arma_extend/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/boost_backport/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/cv/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/data/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/dists/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/hpt/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/kernels/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/math/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/metrics/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/optimizers/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/tree/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/core/util/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/methods/: CTestTestfile.cmake  cmake_install.cmake
xcodeproj/src/mlpack/methods/adaboost/: CTestTestfile.cmake  cmake_install.cmake
(+150 files in other folders)
